syntax = "proto3";

option csharp_namespace = "Northwind.Products.Api.Proto";

/* >>
import "google/api/annotations.proto";
<< */

package ProductApi;

message ProductItemRequest {
	int32 id = 1;
}

message ProductItemResponse {
	int32 id = 1;
    string name = 2;
    double unitPrice = 3;
    int32 availableStock = 4;
    int32 reservedStock = 5;
}

service Products {
    rpc GetProductById(ProductItemRequest) returns (ProductItemResponse) {
    /* >>
  	option (google.api.http) = {
        get: "/products/{productId}"
      };
	<< */
    }		
}